Revert "Fixed Navbar Font Size and Adjusted Search Bar Alignment"
This reverts commit f77e20c2668e843beba0f57581d4d32e003c95ad.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,12 +222,6 @@ button {
   background: none;
   border: none;
   font: inherit;
-  margin-bottom: 8px;
-}
-
-button span{
-  font: 14px var(--ff-roboto);
-  font-weight: bold;
 }
 
 input {
@@ -355,7 +349,7 @@ html {
   position: absolute;
   inset: 0;
   border: 1px solid var(--btn-bg, var(--pistachio));
-  transform: translate(2px, 2px);
+  transform: translate(5px, 5px);
   transition: var(--transition-2);
 }
 
@@ -754,24 +748,19 @@ html {
   /* width: 100px; */
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-wrap: nowrap;
   gap: 0.75rem;
-  font-size: 14px;
 }
 
 .input-group .form-control{
   height: 39px;
   min-width: 100px;
-  margin-bottom: 8px;
 }
 
 .input-group .search-btn{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 8px;
-  margin-left: 5px;
 }
 
 .close-button {
